--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 }
 
 @font-face {
-  font-family: "SegoeUIBlack";
+  font-family: "SegoeIBlackU";
   src: url("/fonts/SegoeUISemiBold.woff") format("woff");
   font-weight: normal;
   font-style: normal;
@@ -402,6 +402,8 @@ body {
   font-family: SegoeUI;
   background-color: black;
   color: white;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
@@ -658,6 +660,7 @@ body {
   display: flex;
   justify-content: center;
   position: absolute;
+  z-index: 50;
   top: 112px;
   left: 0;
   right: 0;
@@ -737,6 +740,7 @@ body {
   right: 0;
   width: 82px;
   height: 104px;
+  z-index: 20;
   background: url(../images/sprite_png.png) -10px -10px;
 }
 
@@ -781,5 +785,308 @@ body {
 
 .header_select.is-active .header_select_body {
   display: block;
+}
+
+.button {
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.01em;
+  color: #ffffff;
+  background-color: #e6362c;
+  cursor: pointer;
+  border-color: transparent;
+  border-radius: 4px;
+}
+
+.button:hover, .button:focus {
+  color: #e6362c;
+  background-color: #ffffff;
+}
+
+.hero_text_wrapper {
+  position: absolute;
+  left: 54%;
+  top: 25%;
+  text-align: left;
+}
+
+.hero_pretitle {
+  font-size: 37px;
+  line-height: 1.64;
+  font-weight: 400;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  margin: 0;
+}
+
+.hero_title {
+  font-family: "SegoeUI-Bold";
+  font-size: 70px;
+  line-height: 1.07;
+  font-weight: 900;
+  letter-spacing: 0.016em;
+  max-width: 447px;
+  margin: 0 0 31px 0;
+}
+
+.hero_description {
+  font-size: 19px;
+  line-height: 1.68;
+  max-width: 473px;
+  margin: 0 0 31px 0;
+}
+
+.hero_button {
+  min-width: 150px;
+  max-height: 43px;
+  padding: 7px 15px;
+}
+
+.swiper-container {
+  width: 100%;
+  height: 795px;
+}
+
+.swiper-slide {
+  background-position: 50% 25%;
+  background-color: black;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.swiper-slide.slide_1 {
+  background-image: url(/images/slide__1.jpg);
+}
+
+.swiper-slide.slide_2 {
+  background-image: url(/images/slide__1.jpg);
+}
+
+.swiper-slide.slide_3 {
+  background-image: url(/images/slide__1.jpg);
+}
+
+.swiper-slide.slide_4 {
+  background-image: url(/images/slide__1.jpg);
+}
+
+.swiper-pagination-bullet {
+  width: 14px;
+  height: 14px;
+  display: inline-block;
+  border-radius: 100%;
+  background: #4d4d4d;
+  opacity: 0.2;
+}
+
+.swiper-pagination-bullet-active {
+  background: #e6362c;
+  opacity: 1;
+}
+
+.advantages {
+  padding-top: 49px;
+  padding-bottom: 76px;
+  border-bottom: 3px solid #4d4d4d;
+  max-width: 1298px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .advantages_list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: baseline;
+    margin: -15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantages_list {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+  }
+}
+
+.advantages_image_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.advantages_list_item {
+  max-width: 261px;
+  text-align: center;
+}
+
+@media screen and (max-width: 767px) {
+  .advantages_list_item {
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+  }
+  .advantages_list_item:hover, .advantages_list_item:focus {
+    border: 1px solid #4d4d4d;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .advantages_list_item {
+    margin: 15px;
+    flex-basis: calc((100% - 4 * 15px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantages_list_item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+.advantages_title {
+  font-family: "SegoeUIBlack";
+  font-size: 25px;
+  line-height: 3;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: 0.016em;
+  margin: 0 0 12px 0;
+}
+
+.advantages_description {
+  font-size: 19px;
+  line-height: 1.2;
+  font-weight: 400;
+  margin: 0;
+}
+
+.products {
+  text-align: center;
+  padding-top: 75px;
+  padding-bottom: 63px;
+  background-image: url(/images/fon_produkts.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  max-height: 1021px;
+  opacity: 0.8;
+  position: relative;
+}
+
+.products_title {
+  font-family: "SegoeUI-Bold";
+  font-size: 37px;
+  line-height: 1.64;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  margin: 0 0 49px 0;
+}
+
+.products_description {
+  font-size: 19px;
+  line-height: 1.2;
+  margin: 0 auto 40px auto;
+  max-width: 942px;
+}
+
+.products_list_item.product_1 {
+  background-image: url(/images/slide_2.png);
+  width: 940px;
+  height: 400px;
+}
+
+.products_list_item.product_2 {
+  background-image: url(/images/slide_3.jpg);
+  max-width: 765px;
+  height: 575px;
+}
+
+.products_list_item.product_3 {
+  background-image: url(/images/slide_4.jpg);
+  max-width: 940px;
+  height: 400px;
+}
+
+.products_list_item.product_4 {
+  background-image: url(/images/slide_2.png);
+  max-width: 965px;
+  height: 400px;
+}
+
+@media screen and (max-width: 767px) {
+  .products_list_item {
+    max-width: 100%;
+    height: 100%;
+    background-size: cover;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .products_list_item {
+    display: flex;
+    justify-content: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+}
+
+.products_list_title {
+  font-family: "SegoeUI-Bold";
+  font-size: 25px;
+  line-height: 1.48;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+}
+
+.products_list_title_wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 3, 0.4);
+  width: 342px;
+  height: 100%;
+  padding-right: 62px;
+  padding-left: 62px;
+}
+
+.products_hover_title {
+  font-family: "SegoeUI-Bold";
+  font-size: 19px;
+  line-height: 3;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  color: #e6e6e6;
+  margin: 0 0 10px 0;
+}
+
+.products_hover_description {
+  font-size: 14px;
+  line-height: 1.7;
+  max-width: 226px;
+  margin: 0 0 20px 0;
+}
+
+.products_button {
+  font-size: 14px;
+}
+
+.products_image_wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.products_list_hover_wrapper {
+  background-color: rgba(0, 0, 3, 0.4);
+  width: 342px;
+  height: 100%;
+  text-align: center;
 }
 /*# sourceMappingURL=main.css.map */
