--- a/sass/components/_select.scss
+++ b/sass/components/_select.scss
@@ -50,6 +50,7 @@
   right: 0;
   width: 82px;
   height: 104px;
+  z-index: 20;
   background: url(../images/sprite_png.png) -10px -10px;
 }
 .header_select_item {
