--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,3 +4,8 @@
 @import "./components/container";
 @import "./layout/header";
 @import "./components/select";
+@import "./components/buttons";
+@import "./layout/hero";
+@import "./components/slider";
+@import "./layout/advantages";
+@import "./layout/products";
