--- a/sass/utils/_fonts.scss
+++ b/sass/utils/_fonts.scss
@@ -5,7 +5,7 @@
   font-style: normal;
 }
 @font-face {
-  font-family: "SegoeUIBlack";
+  font-family: "SegoeIBlackU";
   src: url("/fonts/SegoeUISemiBold.woff") format("woff");
   font-weight: normal;
   font-style: normal;
