--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -11,7 +11,7 @@
   border-radius: 4px;
   &:hover,
   &:focus {
-    color: #e6362c;
+    color: $accent-text-color;
     background-color: #ffffff;
   }
 }
