--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,26 +1,32 @@
-.swiper-container {
+.swiper-container.hero-container {
   width: 100%;
-  height: 795px;
+  height: 300px;
+  @media screen and (min-width: 768px) {
+    height: 400px;
+  }
+  @media screen and (min-width: 1200px) {
+    height: 795px;
+  }
 }
 
-.swiper-slide {
+.swiper-slide.hero_slide {
   background-position: 50% 25%;
   background-color: black;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.swiper-slide.slide_1 {
+.swiper-slide.hero_slide.slide_1 {
   background-image: url(/images/slide__1.jpg);
 }
 
-.swiper-slide.slide_2 {
+.swiper-slide.hero_slide.slide_2 {
   background-image: url(/images/slide__1.jpg);
 }
-.swiper-slide.slide_3 {
+.swiper-slide.hero_slide.slide_3 {
   background-image: url(/images/slide__1.jpg);
 }
-.swiper-slide.slide_4 {
+.swiper-slide.hero_slide.slide_4 {
   background-image: url(/images/slide__1.jpg);
 }
 
@@ -32,7 +38,7 @@
   background: #4d4d4d;
   opacity: 0.2;
   &-active {
-    background: #e6362c;
+    background: $accent-text-color;
     opacity: 1;
   }
 }
