--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -6,9 +6,8 @@
 }
 
 .hero_pretitle {
-  font-size: 37px;
+  font-size: 16px;
   line-height: 1.64;
-  font-weight: 400;
   letter-spacing: 0.1em;
   text-transform: uppercase;
   margin: 0;
@@ -16,22 +15,55 @@
 
 .hero_title {
   font-family: "SegoeUI-Bold";
-  font-size: 70px;
+  font-size: 25px;
   line-height: 1.07;
   font-weight: 900;
   letter-spacing: 0.016em;
-  max-width: 447px;
+  max-width: 150px;
   margin: 0 0 31px 0;
 }
 
 .hero_description {
-  font-size: 19px;
-  line-height: 1.68;
-  max-width: 473px;
-  margin: 0 0 31px 0;
+  display: none;
 }
+
 .hero_button {
-  min-width: 150px;
+  min-width: 100px;
   max-height: 43px;
   padding: 7px 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .hero_pretitle {
+    font-size: 25px;
+    line-height: 1.64;
+  }
+  .hero_title {
+    font-family: "SegoeUI-Bold";
+    font-size: 40px;
+    max-width: 250px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero_pretitle {
+    font-size: 37px;
+    line-height: 1.64;
+  }
+  .hero_title {
+    font-family: "SegoeUI-Bold";
+    font-size: 70px;
+    max-width: 447px;
+  }
+  .hero_description {
+    font-size: 19px;
+    line-height: 1.68;
+    max-width: 473px;
+    margin: 0 0 31px 0;
+  }
+  .hero_button {
+    min-width: 150px;
+    max-height: 43px;
+    padding: 7px 15px;
+  }
 }
