--- a/sass/layout/_products.scss
+++ b/sass/layout/_products.scss
@@ -1,14 +1,16 @@
 .products {
   text-align: center;
   padding-top: 75px;
-  padding-bottom: 63px;
-  background-image: url(/images/fon_produkts.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  max-height: 1021px;
-  opacity: 0.8;
-  position: relative;
+  @media screen and (min-width: 1200px) {
+    background-image: url(/images/fon_produkts.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    width: 100%;
+    opacity: 0.8;
+    max-height: 1021px;
+    position: relative;
+  }
 }
 .products_title {
   font-family: "SegoeUI-Bold";
@@ -17,63 +19,94 @@
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 0.1em;
-  margin: 0 0 49px 0;
+  margin: 0 0 29px 0;
 }
 
 .products_description {
   font-size: 19px;
   line-height: 1.2;
-  margin: 0 auto 40px auto;
+  margin: 0 auto 55px auto;
   max-width: 942px;
 }
 
 .products_list_item.product_1 {
   background-image: url(/images/slide_2.png);
-  width: 940px;
-  height: 400px;
+  @media screen and (min-width: 1200px) {
+    width: 940px;
+    height: 400px;
+    left: -200px;
+    z-index: 4;
+  }
 }
 
 .products_list_item.product_2 {
   background-image: url(/images/slide_3.jpg);
-  max-width: 765px;
-  height: 575px;
+  background-position: center bottom;
+  @media screen and (min-width: 1200px) {
+    width: 765px;
+    height: 555px;
+    left: 20%;
+    top: -15px;
+    z-index: 3;
+  }
 }
 
 .products_list_item.product_3 {
   background-image: url(/images/slide_4.jpg);
-  max-width: 940px;
-  height: 400px;
+  @media screen and (min-width: 1200px) {
+    width: 940px;
+    height: 400px;
+    right: -150px;
+    z-index: 2;
+  }
 }
 
 .products_list_item.product_4 {
   background-image: url(/images/slide_2.png);
-  max-width: 965px;
-  height: 400px;
+  @media screen and (min-width: 1200px) {
+    width: 965px;
+    height: 400px;
+    right: -300px;
+    z-index: 1;
+  }
+}
+.products_list_item {
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+  &:hover,
+  &:focus {
+    transform: scale(1.1);
+    z-index: 5;
+  }
 }
 
 .products_list_item {
   @media screen and (max-width: 767px) {
-    max-width: 100%;
-    height: 100%;
+    min-width: 300px;
+    height: 300px;
     background-size: cover;
+    background-repeat: no-repeat;
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    max-width: 100%;
+    height: 400px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    &:not(:last-child) {
+      margin-bottom: 40px;
+    }
+  }
+  @media screen and (min-width: 1200px) {
     display: flex;
     justify-content: center;
     background-size: cover;
+    position: absolute;
     background-repeat: no-repeat;
   }
 }
-// @media screen and (min-width: 768px) {
-//   .products_list {
-//     display: flex;
-//     justify-content: space-between;
-//     width: 1900px;
-//     height: 470px;
-//     border-bottom: 3px solid #4d4d4d;
-//     max-width: 1298px;
-//   }
-// }
 
 .products_list_title {
   font-family: "SegoeUI-Bold";
@@ -89,10 +122,16 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 3, 0.4);
-  width: 342px;
+  width: 100%;
   height: 100%;
   padding-right: 62px;
   padding-left: 62px;
+  @media screen and (min-width: 768px) {
+    width: 342px;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .products_hover_title {
@@ -108,7 +147,6 @@
 .products_hover_description {
   font-size: 14px;
   line-height: 1.7;
-  max-width: 226px;
   margin: 0 0 20px 0;
 }
 
@@ -121,9 +159,37 @@
   justify-content: center;
   align-items: center;
 }
+
 .products_list_hover_wrapper {
+  display: none;
   background-color: rgba(0, 0, 3, 0.4);
-  width: 342px;
+  width: 100%;
   height: 100%;
   text-align: center;
+  padding: 20px 20px;
+  @media screen and (min-width: 768px) {
+    width: 342px;
+    height: 100%;
+    padding: 75px 40px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+.products_list_hover_wrapper.is-focused {
+  display: block;
+}
+
+.products_list_title_wrapper.is-hidden {
+  display: none;
+}
+
+.products_list {
+  position: relative;
+  height: 100%;
+  border-bottom: 3px solid #4d4d4d;
+  max-width: 1298px;
+  text-align: center;
+  @media screen and (min-width: 1200px) {
+    height: 485px;
+  }
 }
