--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "./utils/fonts";
+@import "./utils/_variables";
 @import "./utils/normalize";
 @import "./base/base";
 @import "./components/container";
@@ -9,3 +10,6 @@
 @import "./components/slider";
 @import "./layout/advantages";
 @import "./layout/products";
+@import "./layout/partners";
+@import "./layout/footer";
+@import "./components/page_scroll";
