--- a/sass/layout/_partners.scss
+++ b/sass/layout/_partners.scss
@@ -58,7 +58,7 @@
     display: none;
   }
 }
-.swiper-slide.slide_1 {
+.partners_slide_1 {
   @media screen and (min-width: 768px) {
     margin-right: 20px;
   }
