--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -17,17 +17,17 @@
 }
 
 .swiper-slide.hero_slide.slide_1 {
-  background-image: url(/images/slide__1.jpg);
+  background-image: url(./images/slide__1.jpg);
 }
 
 .swiper-slide.hero_slide.slide_2 {
-  background-image: url(/images/slide__1.jpg);
+  background-image: url(./images/slide__1.jpg);
 }
 .swiper-slide.hero_slide.slide_3 {
-  background-image: url(/images/slide__1.jpg);
+  background-image: url(./images/slide__1.jpg);
 }
 .swiper-slide.hero_slide.slide_4 {
-  background-image: url(/images/slide__1.jpg);
+  background-image: url(./images/slide__1.jpg);
 }
 
 .swiper-pagination-bullet {
