--- a/css/main.css
+++ b/css/main.css
@@ -891,19 +891,19 @@ body {
 }
 
 .swiper-slide.hero_slide.slide_1 {
-  background-image: url(./images/slide__1.jpg);
+  background-image: url(../images/slide__1.jpg);
 }
 
 .swiper-slide.hero_slide.slide_2 {
-  background-image: url(./images/slide__1.jpg);
+  background-image: url(../images/slide__1.jpg);
 }
 
 .swiper-slide.hero_slide.slide_3 {
-  background-image: url(./images/slide__1.jpg);
+  background-image: url(../images/slide__1.jpg);
 }
 
 .swiper-slide.hero_slide.slide_4 {
-  background-image: url(./images/slide__1.jpg);
+  background-image: url(../images/slide__1.jpg);
 }
 
 .swiper-pagination-bullet {
