--- a/sass/components/_page_scroll.scss
+++ b/sass/components/_page_scroll.scss
@@ -21,5 +21,5 @@
   margin: -6px 0 0 -10px;
   width: 20px;
   height: 12px;
-  background: url(/images/sprite_png.png) no-repeat -51px -134px;
+  background: url(../images/sprite_png.png) no-repeat -51px -134px;
 }
