--- a/sass/utils/_fonts.scss
+++ b/sass/utils/_fonts.scss
@@ -1,24 +1,24 @@
 @font-face {
   font-family: "SegoeUI";
-  src: url("/fonts/SegoeUIRegular.woff") format("woff");
+  src: url("../fonts/SegoeUIRegular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "SegoeIBlackU";
-  src: url("/fonts/SegoeUISemiBold.woff") format("woff");
+  src: url("../fonts/SegoeUISemiBold.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "SegoeUI-Bold";
-  src: url("/fonts/SegoeUIBold.woff") format("woff");
+  src: url("../fonts/SegoeUIBold.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "ClearSans";
-  src: url("/fonts/ClearSansRegular.woff") format("woff");
+  src: url("../fonts/ClearSansRegular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
