--- a/css/main.css
+++ b/css/main.css
@@ -1396,14 +1396,14 @@ body {
 .facebook_link {
   width: 22px;
   height: 23px;
-  background: url(/images/sprite_png.png) -160px -52px;
+  background: url(../images/sprite_png.png) -160px -52px;
   background-repeat: no-repeat;
 }
 
 .youtube_link {
   width: 30px;
   height: 22px;
-  background: url(/images/sprite_png.png) -160px -10px;
+  background: url(../images/sprite_png.png) -160px -10px;
   background-repeat: no-repeat;
 }
 
