--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -22,11 +22,11 @@
   max-width: 150px;
   margin: 0 0 31px 0;
 }
-
-.hero_description {
-  display: none;
+@media screen and (max-width: 1199px) {
+  .hero_description {
+    display: none;
+  }
 }
-
 .hero_button {
   min-width: 100px;
   max-height: 43px;
